--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ repositories {
 }
 
 dependencies {
-	implementation 'com.graphql-java:graphql-java' // NEW
-	implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc' // NEW
-	implementation 'com.google.guava:guava' // NEW
+	implementation 'com.graphql-java:graphql-java:11.0' // NEW
+	implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:1.0' // NEW
+	implementation 'com.google.guava:guava:26.0-jre' // NEW
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
