[UPT] Using version examplo

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	compile 'com.google.firebase:firebase-admin:6.11.0'
+	implementation 'com.google.firebase:firebase-admin:6.8.1'
 }
 
 test {
